--- a/cookies.html
+++ b/cookies.html
@@ -14,6 +14,11 @@
             color: #333;
             scroll-behavior: smooth;
         }
+        p {
+            font-size: 22px;
+            text-align: justify;
+        }
+
         header {
             background-color: #001f3f;
             color: white;
@@ -51,12 +56,22 @@
         h1, h2 {
             color: #001f3f;
         }
+
+        li {
+            text-align: justify;
+            font-size: 20px;
+        }
+
         footer {
             background-color: #001f3f;
             color: white;
             padding: 30px;
             text-align: center;
             font-size: 14px;
+        }
+        footer p {
+            text-align: justify;
+            font-size: 20px;
         }
         footer nav a {
             color: white;
