--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     <nav>
         <p><a href='politica.html'>Política de Privacidade</a> | 
         <a href='cookies.html'>Política de Cookies</a> | 
-        Termo de Condições de Uso</p>
+        <a href='termo.html'>Termo de Condições de Uso</a>
         <p><br>
-        <img src="imagens/image.png" width="81" height="81">          <br>
+        <img src="imagens/image.png" width="81" height="81">     
         </p>
     </nav>
 </footer>
