--- a/politica.html
+++ b/politica.html
@@ -13,6 +13,15 @@
             color: #333;
             scroll-behavior: smooth;
         }
+        p {
+            font-size: 25px;
+            text-align: justify;
+        }
+        li {
+            font-size: 25px;
+            text-align: justify;
+        }
+        
         header {
             background-color: #001f3f;
             color: white;
@@ -57,6 +66,12 @@
             text-align: center;
             font-size: 14px;
         }
+
+        footer p {
+            text-align: center;
+            font-size: 18px;
+        }
+
         footer nav a {
             color: white;
             text-decoration: none;
@@ -148,9 +163,9 @@
     <h2>Compromisso do Usuário</h2>
     <p>O usuário se compromete a fazer uso adequado dos conteúdos e da informação que o produto oferece no site e com caráter enunciativo, mas não limitativo:</p>
     <ul>
-        <li>A) Não se envolver em atividades que sejam ilegais ou contrárias à boa fé a à ordem pública;</li>
-        <li>B) Não difundir propaganda ou conteúdo de natureza racista, xenofóbica, de qualquer tipo de pornografia ilegal, de apologia ao terrorismo ou contra os direitos humanos;</li>
-        <li>C) Não causar danos aos sistemas físicos (hardwares) e lógicos (softwares) do produto, de seus fornecedores ou terceiros, para introduzir ou disseminar vírus ou quaisquer outros sistemas de hardware ou software que sejam capazes de causar danos, anteriormente mencionados.</li>
+        <li><b>A)</b> Não se envolver em atividades que sejam ilegais ou contrárias à boa fé a à ordem pública;</li>
+        <li><b>B)</b> Não difundir propaganda ou conteúdo de natureza racista, xenofóbica, de qualquer tipo de pornografia ilegal, de apologia ao terrorismo ou contra os direitos humanos;</li>
+        <li><b>C)</b> Não causar danos aos sistemas físicos (hardwares) e lógicos (softwares) do produto, de seus fornecedores ou terceiros, para introduzir ou disseminar vírus ou quaisquer outros sistemas de hardware ou software que sejam capazes de causar danos, anteriormente mencionados.</li>
     </ul>
 
     <h2>Mais informações</h2>
@@ -165,11 +180,10 @@
     <p><strong>Email:</strong> <a href="mailto:comercial@primeiravia.com">comercial@primeiravia.com</a> | <strong>Telefone:</strong> (11) 3596-0291</p>
     <p>© 2024. Todos os direitos reservados.</p>
     <nav>
-        <p><a href='politica.html'>Política de Privacidade</a> | 
-        <a href='cookies.html'>Política de Cookies</a> |          Termo de Condições de Uso</p>
-        <p><br>
-        <img src="imagens/image.png" width="81" height="81">          <br>
-        </p>
+    <p><a href='politica.html'>Política de Privacidade</a> | 
+    <a href='cookies.html'>Política de Cookies</a> |                  
+    <img src="imagens/image.png" width="81" height="81">         
+    </p>
     </nav>
 </footer>
 
