--- a/termo.html
+++ b/termo.html
@@ -23,19 +23,28 @@
             top: 0;
             z-index: 1000;
         }
-        header nav {
+        p {
+            text-align: justify;
+            font-size: 20px;
+        }
+
+        li {
+            text-align: justify;
+            font-size: 20px;
+        }
+        nav {
             display: flex;
             justify-content: flex-start;
         
         }
-        header nav a {
+        nav a {
             margin-right: 20px;
             color: white;
             text-decoration: none;
             font-size: 18px;
             transition: color 0.3s ease;
         }
-        header nav a:hover {
+        nav a:hover {
             background-color: hsl(210, 87%, 22%);
             color: rgb(231, 227, 3);
             text-decoration: none;
@@ -58,6 +67,11 @@
             text-align: center;
             font-size: 14px;
         }
+        footer p {
+            text-align: center;
+            font-size: 18px;
+        }
+
         footer nav a {
             color: white;
             text-decoration: none;
@@ -196,10 +210,11 @@
     <p><strong>Email:</strong> <a href="mailto:comercial@primeiravia.com">comercial@primeiravia.com</a> | <strong>Telefone:</strong> (11) 3596-0291</p>
     <p>© 2024. Todos os direitos reservados.</p>
     <nav>
-        <p><a href='/politica'>Política de Privacidade</a> | 
-          <a href='/cookies'>Política de Cookies</a> |          Termo de Condições de Uso</p>
+        <p><a href='politica.html'>Política de Privacidade</a> | 
+        <a href='cookies.html'>Política de Cookies</a> |         
+        <a href='termo.html'>Termo de Condições de Uso</a>
         <p><br>
-          <img src="imagens/image.png" width="81" height="81">          <br>
+        <img src="imagens/image.png" width="81" height="81"> <br>
         </p>
     </nav>
 </footer>
