--- a/cookies.html
+++ b/cookies.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Política de Cookies</title>
     <style>
-    body {
+body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
@@ -15,10 +15,14 @@
             scroll-behavior: smooth;
         }
         p {
-            font-size: 22px;
+            font-size: 25px;
             text-align: justify;
         }
-
+        li {
+            font-size: 25px;
+            text-align: justify;
+        }
+        
         header {
             background-color: #001f3f;
             color: white;
@@ -56,12 +60,6 @@
         h1, h2 {
             color: #001f3f;
         }
-
-        li {
-            text-align: justify;
-            font-size: 20px;
-        }
-
         footer {
             background-color: #001f3f;
             color: white;
@@ -69,10 +67,12 @@
             text-align: center;
             font-size: 14px;
         }
+
         footer p {
-            text-align: justify;
-            font-size: 20px;
+            text-align: center;
+            font-size: 18px;
         }
+
         footer nav a {
             color: white;
             text-decoration: none;
@@ -80,7 +80,11 @@
             transition: color 0.3s ease;
         }
         footer nav a:hover {
-            color: #FFD700;
+            background-color: hsl(210, 87%, 22%);
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+            transition-duration: .5s;
         }
         footer img {
             margin-top: 20px;
@@ -189,9 +193,10 @@
     <p>© 2024. Todos os direitos reservados.</p>
     <nav>
         <p><a href='politica.html'>Política de Privacidade</a> | 
-        <a href='cookies.html'>Política de Cookies</a> |          Termo de Condições de Uso</p>
+        <a href='cookies.html'>Política de Cookies</a> | 
+        <a href='termo.html'>Termo de Condições de Uso</a>
         <p><br>
-        <img src="imagens/image.png" width="81" height="81">          <br>
+        <img src="imagens/image.png" width="81" height="81">     
         </p>
     </nav>
 </footer>
