--- a/politica.html
+++ b/politica.html
@@ -180,10 +180,12 @@
     <p><strong>Email:</strong> <a href="mailto:comercial@primeiravia.com">comercial@primeiravia.com</a> | <strong>Telefone:</strong> (11) 3596-0291</p>
     <p>© 2024. Todos os direitos reservados.</p>
     <nav>
-    <p><a href='politica.html'>Política de Privacidade</a> | 
-    <a href='cookies.html'>Política de Cookies</a> |                  
-    <img src="imagens/image.png" width="81" height="81">         
-    </p>
+        <p><a href='politica.html'>Política de Privacidade</a> | 
+        <a href='cookies.html'>Política de Cookies</a> | 
+        <a href='termo.html'>Termo de Condições de Uso</a>
+        <p><br>
+        <img src="imagens/image.png" width="81" height="81">     
+        </p>
     </nav>
 </footer>
 
