--- a/termo.html
+++ b/termo.html
@@ -77,7 +77,7 @@
             text-decoration: none;
             font-size: 14px;
             transition: color 0.3s ease;
-        }
+        }        
         footer nav a:hover {
             color: #FFD700;
         }
@@ -211,10 +211,10 @@
     <p>© 2024. Todos os direitos reservados.</p>
     <nav>
         <p><a href='politica.html'>Política de Privacidade</a> | 
-        <a href='cookies.html'>Política de Cookies</a> |         
+        <a href='cookies.html'>Política de Cookies</a> | 
         <a href='termo.html'>Termo de Condições de Uso</a>
         <p><br>
-        <img src="imagens/image.png" width="81" height="81"> <br>
+        <img src="imagens/image.png" width="81" height="81">     
         </p>
     </nav>
 </footer>
