--- a/termo.html
+++ b/termo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Termos e Condições de Uso</title>
     <style>
-        body {
+       body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
@@ -14,6 +14,15 @@
             color: #333;
             scroll-behavior: smooth;
         }
+        p {
+            font-size: 25px;
+            text-align: justify;
+        }
+        li {
+            font-size: 25px;
+            text-align: justify;
+        }
+        
         header {
             background-color: #001f3f;
             color: white;
@@ -23,28 +32,19 @@
             top: 0;
             z-index: 1000;
         }
-        p {
-            text-align: justify;
-            font-size: 20px;
-        }
-
-        li {
-            text-align: justify;
-            font-size: 20px;
-        }
-        nav {
+        header nav {
             display: flex;
             justify-content: flex-start;
         
         }
-        nav a {
+        header nav a {
             margin-right: 20px;
             color: white;
             text-decoration: none;
             font-size: 18px;
             transition: color 0.3s ease;
         }
-        nav a:hover {
+        header nav a:hover {
             background-color: hsl(210, 87%, 22%);
             color: rgb(231, 227, 3);
             text-decoration: none;
@@ -67,6 +67,7 @@
             text-align: center;
             font-size: 14px;
         }
+
         footer p {
             text-align: center;
             font-size: 18px;
@@ -77,9 +78,13 @@
             text-decoration: none;
             font-size: 14px;
             transition: color 0.3s ease;
-        }        
+        }
         footer nav a:hover {
-            color: #FFD700;
+            background-color: hsl(210, 87%, 22%);
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+            transition-duration: .5s;
         }
         footer img {
             margin-top: 20px;
@@ -89,6 +94,8 @@
             transform: scale(1.1);
         }
     </style>
+</head>
+<body>
 </head>
 <body>
 
